# lapa-depth

./: .dockerignore  .gitignore  Dockerfile  README.md  depth_preview.html  gen_depth.py  gen_z_rgb.sh  install.sh  prepare_model4_features.sh  preprocess_libero_data.sh  pyproject.toml  readme_m.md  requirements copy.txt  requirements.txt  setup.sh  test.sh  test_env.sh  train.sh  wget-log
data/: build_model4_source_jsonl.py  finetune_preprocess.py
dev/: extract_frames.py  extract_frames.sh
laq/: eval_stage1 copy.py  eval_stage_case3.py  eval_stage_case4.py  export_model4_depth_features.py  export_model4_rgb_features.py  inference_sthv2.py  philo.code-workspace  readme.md  test_ssv2.sh  train_ssv2.sh  train_ssv2_case3.sh  train_ssv2_case4.sh  train_stage25_sthv2_feature_model4_corl_da.py  train_stage25_sthv2_feature_model4_corl_da.sh  train_sthv2.py  train_sthv2_case3.py  train_sthv2_case4.py  train_sthv2_org.py
laq/laq_model/: __init__.py  data copy.py  data.py  data_org.py  data_stage25_feature_model4.py  laq_stage25_trainer_feature_model4.py  laq_trainer copy.py  laq_trainer.py  laq_trainer_case4.py  latent_action_quantization.py  latent_action_quantization_case4.py  latent_action_quantization_feature_export.py  latent_action_quantization_stage25_feature_model4.py  latent_action_quantization_v1.py  nsvq.py
latent_pretraining/: data.py  delta_llama.py  finetune_stage3_model4.py  inference-org.py  inference.py  llama_action_rgbd.py  sampler_latent_pretrain.py  train.py
scripts/: finetune_real_depth.sh  finetune_simpler.sh  latent_pretrain_openx.sh
(+4 files in other folders)
