[project]
name = "lapa"
version = "0.1.0"
description = "Latent Action Pretraining with Depth"
requires-python = ">=3.10"
dependencies = [
    "flax==0.7.0",
    "optax==0.1.7",
    "chex==0.1.82",
    "einops",
    "tensorflow-cpu",
    "transformers>=4.40,<4.45",
    "datasets>=2.14",
    "accelerate>=0.20",
    "ema-pytorch",
    "vector-quantize-pytorch",
    "numpy==1.26.4",
    "scipy==1.12.0",
    "opencv-python-headless",
    "albumentations",
    "Pillow",
    "imageio[ffmpeg]",
    "h5py",
    "pandas",
    "tqdm",
    "huggingface-hub",
    "sentencepiece",
    "tiktoken",
    "wandb",
    "ml-collections",
    "beartype",
    "uvicorn",
    "fastapi",
    "requests",
    "gcsfs",
    "ipdb",
    "draccus",
    "json-numpy",
    "msgpack",
    "protobuf",
    "google-pasta",
    "flatbuffers",
    "gast",
    "astunparse",
    "termcolor",
    "absl-py",
    "grpcio",
    "wrapt",
    "wheel",
    "markdown",
    "werkzeug",
    "tux @ git+https://github.com/lhao499/tux.git",
]
